[fix] fixed the problem that SimpleModal can not cover entire page and scrollbar is still be shown when modal is shown.

--- a/src/style/_component.scss
+++ b/src/style/_component.scss
@@ -107,47 +107,47 @@
 
 // -------------------------modal-------------------------------
 .modal {
-    @apply flex justify-center items-center absolute top-0 left-0;
-    
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    
-    // @include sizeHelper(100vw, 100vh);
-    // width: 100vw;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
+    @apply w-screen h-screen bg-gray-100/50 fixed;
 
-    // outline: 2px solid gold;
+    top: 0;
+    left: 0;
 
-    &_dialog {
-      width: 80%;
-      border-radius: 0.25rem;
-      padding: 16px;
-      background: #fff;
+    &_body{
+        @apply absolute flex flex-col p-8 rounded bg-white shadow-lg shadow-gray-80/30 overflow-y-auto;
 
-      &_title {
-        color: #6f7789;
-        border-bottom: 1px solid #ccc;
-      }
-    }
-}
+        z-index: 100;
+        max-height: 80vh;
 
-.picture_frame{
-    &-small{
-        height: 150px;
+        &.lg {
+            @apply w-4/5;
+        }
+
+        &.md {
+            @apply w-3/5;
+        }
+
+        &.sm {
+            @apply w-2/5;
+        }
     }
 
-    &-big{
-        height: 320px;
-    }    
-}
+    &-show {
+        @apply fixed;
 
-.picture_frame-small, .picture_frame-big{
-    @apply overflow-hidden;
+        top: 10%;
+
+        &.lg {
+            left: 10%;
+        }
+
+        &.md {
+            left:20%;
+        }
+
+        &.sm {
+            left: 30%;
+        }
+    }
 }
 
 // -------------------------input-------------------------------
